# markdown-present

./: .gitignore  AGENTS.md  Dockerfile  README.md  architecture.md  design.md  fly.toml  main.py  pyproject.toml  test.py
backend/: main.py  models.py  utils.py
frontend/: audience.html  index.html  presenter.html
frontend/css/: style.css
frontend/js/: audience.js  presenter.js  upload.js
samples/: bundle.py
samples/basic_pitch/: deck.md
samples/with_images/: deck.md
tests/: test_main.py  test_utils.py
